--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "event-stream": "^3.3.2",
     "fs": "0.0.2",
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "minimist": "^1.2.0",
     "vinyl": "^1.1.1"
   }
