--- a/package.json
+++ b/package.json
@@ -5,27 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  }
+  ,
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
+  "license": "None",
+  "dependencies": {
     "browser-sync": "^2.11.1",
     "govlab-styleguide": "^1.0.9",
     "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7",
     "gulp-data": "^1.2.1",
-    "gulp-file": "^0.2.0",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-shell": "^0.5.2",
-    "nunjucks": "^2.3.0"
-  },
-  "dependencies": {
-    "colors": "^1.1.2",
     "event-stream": "^3.3.2",
     "fs": "0.0.2",
-    "gulp": "^3.9.1",
-    "gulp-util": "^3.0.7",
     "minimist": "^1.2.0",
     "vinyl": "^1.1.1"
   }
