--- a/source/data/example.yaml
+++ b/source/data/example.yaml
@@ -1,7 +1,5 @@
-- id : 09r09090e9f09
-  title : bear magic
+- title : bear magic
   example : value
 
-- id : fdsjiafwefj0e
-  title : Ultimate Bear Car
+- title : Ultimate Bear Car
   example : you wouldnt download a bear
