--- a/source/data/surveys.yaml
+++ b/source/data/surveys.yaml
@@ -2,7 +2,7 @@
 # surveys
 
 - title: The CJCC Survey
-  image: temp2.jpeg
+  image: ddcj-1.jpg
   date_start: October 21, 2015
   date_end: October 24, 2015
   qty_responses: 34
@@ -18,7 +18,7 @@
   downloads:
 
 - title: The Arnold Foundation Skills Survey
-  image: temp3.jpeg
+  image: ddcj-2.jpg
   date_start: September 9, 2015
   date_end: October 21, 2015
   qty_responses: 63
@@ -34,7 +34,7 @@
   downloads:
 
 - title: Empirical Criminal Justice Researcher Survey
-  image: temp4.jpeg
+  image: ddcj-3.jpg
   date_start: 
   date_end:
   qty_responses: 
